fixed portfolio on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -156,6 +156,7 @@ body {
 		display: flex;
 		flex:1;
 		div {
+			width: 100%;
 			min-width: 300px;
 			min-height: 200px;
 			display: flex;
@@ -172,6 +173,9 @@ body {
 				}
 				
 			}
+		}
+		@media (max-width: 500px) {
+			flex-direction: column;
 		}
 	}
 	.contact-form {
